qt6
BUILD_FAILED
--- ERROR LOG (Last 30 lines) ---
/sources/qt-everywhere-src-6.11.1/qtbase/src/plugins/tls/openssl/qsslsocket_openssl_symbols_p.h:160:9: error: ambiguating new declaration of ‘X509_EXTENSION* q_X509_get_ext(X509*, int)’
  160 |     ret q_##func(arg1, arg2) { funcret (ret)func(a, b); }
      |         ^~
/sources/qt-everywhere-src-6.11.1/qtbase/src/plugins/tls/openssl/qsslsocket_openssl_symbols.cpp:352:1: note: in expansion of macro ‘DEFINEFUNC2’
  352 | DEFINEFUNC2(X509_EXTENSION *, X509_get_ext, X509 *a, a, int b, b, return nullptr, return)
      | ^~~~~~~~~~~
/sources/qt-everywhere-src-6.11.1/qtbase/src/plugins/tls/openssl/qsslsocket_openssl_symbols_p.h:472:35: note: old declaration ‘const X509_EXTENSION* q_X509_get_ext(X509*, int)’
  472 | QT_OPENSSL4_CONST X509_EXTENSION *q_X509_get_ext(X509 *a, int b);
      |                                   ^~~~~~~~~~~~~~
/sources/qt-everywhere-src-6.11.1/qtbase/src/plugins/tls/openssl/qsslsocket_openssl_symbols_p.h:156:9: error: ambiguating new declaration of ‘X509_NAME* q_X509_get_issuer_name(X509*)’
  156 |     ret q_##func(arg) { funcret (ret)func(a); }
      |         ^~
/sources/qt-everywhere-src-6.11.1/qtbase/src/plugins/tls/openssl/qsslsocket_openssl_symbols.cpp:364:1: note: in expansion of macro ‘DEFINEFUNC’
  364 | DEFINEFUNC(X509_NAME *, X509_get_issuer_name, X509 *a, a, return nullptr, return)
      | ^~~~~~~~~~
/sources/qt-everywhere-src-6.11.1/qtbase/src/plugins/tls/openssl/qsslsocket_openssl_symbols_p.h:483:30: note: old declaration ‘const X509_NAME* q_X509_get_issuer_name(X509*)’
  483 | QT_OPENSSL4_CONST X509_NAME *q_X509_get_issuer_name(X509 *a);
      |                              ^~~~~~~~~~~~~~~~~~~~~~
/sources/qt-everywhere-src-6.11.1/qtbase/src/plugins/tls/openssl/qsslsocket_openssl_symbols_p.h:156:9: error: ambiguating new declaration of ‘X509_NAME* q_X509_get_subject_name(X509*)’
  156 |     ret q_##func(arg) { funcret (ret)func(a); }
      |         ^~
/sources/qt-everywhere-src-6.11.1/qtbase/src/plugins/tls/openssl/qsslsocket_openssl_symbols.cpp:365:1: note: in expansion of macro ‘DEFINEFUNC’
  365 | DEFINEFUNC(X509_NAME *, X509_get_subject_name, X509 *a, a, return nullptr, return)
      | ^~~~~~~~~~
/sources/qt-everywhere-src-6.11.1/qtbase/src/plugins/tls/openssl/qsslsocket_openssl_symbols_p.h:484:30: note: old declaration ‘const X509_NAME* q_X509_get_subject_name(X509*)’
  484 | QT_OPENSSL4_CONST X509_NAME *q_X509_get_subject_name(X509 *a);
      |                              ^~~~~~~~~~~~~~~~~~~~~~~
[10405/12003] Building CXX object qtbase/src/plugins/tls/openssl/CMakeFiles/QTlsBackendOpenSSLPlugin.dir/__/shared/qdtls_base.cpp.o
[10406/12003] Building CXX object qtbase/src/plugins/tls/openssl/CMakeFiles/QTlsBackendOpenSSLPlugin.dir/qdtls_openssl.cpp.o
ninja: build stopped: subcommand failed.
